# lynxtron

./: .gitignore  .gn  .habitat  BUILD.gn  BUILD.md  CONTRIBUTING.md  README.md  config.gni  lynxtron.d.ts  lynxtron_extra.gni  package.json  tsconfig.default_app.json  tsconfig.json
build_overrides/: android.gni  angle.gni  bindings_files.gni  build.gni  codec_files.gni  darwin.gni  dawn.gni  fml.gni  glslang.gni  gtest.gni  oliver.gni  partition_alloc.gni  renderer_utils_files.gni  resource_file.gni  services_files.gni  spirv_tools.gni  swiftshader.gni  tint.gni  vulkan_loader.gni  vulkan_tools.gni  wayland.gni
plugin/: BUILD.gn  copy_node_headers.py
plugin/cef/: .gitignore  BUILD.gn  cef_extension_module.cc  cef_extension_module.h  cef_pack_helper.py  cef_sources.gni  cef_webview.cc  cef_webview.h  cef_webview_client.cc  cef_webview_client.h  index.cjs  package.json
plugin/cef/bindings/: bind_napi.cc
plugin/cef/scripts/: install.js  rename-helpers.js
plugin/cef/win/: cef_webview_client_win.cc  cef_webview_client_win.h  cef_webview_win.cc  cef_webview_win.h
shell/lynx/: BUILD.gn  copy_bundle.py
shell/lynx/resource_fetcher/: lynx_generic_resource_fetcher_factory.h  lynx_generic_resource_fetcher_impl.cc  lynx_generic_resource_fetcher_impl.h
shell/lynx/trace/: lynx_trace_event.h  runtime_profile_helper.cc  runtime_profile_helper.h
shell/lynx_view_holder/: BUILD.gn  lynx_view.cc  lynx_view.h  lynx_view_client.h  lynx_view_extension_register.cc  lynx_view_extension_register.h  lynx_view_node_module.cc  lynx_view_node_module.h
shell/lynx_view_holder/module/: lynx_bridge_module.cc  lynx_bridge_module.h  lynx_emit_event.cc  lynx_emit_event.h  lynx_module_utils.cc  lynx_module_utils.h  lynx_native_module.cc  lynx_native_module.h  lynx_node_module.cc  lynx_node_module.h
shell/ui/: BUILD.gn  accelerator.cc  accelerator.h  accelerator_util.cc  accelerator_util.h  lynxtron_menu_model.cc  lynxtron_menu_model.h  tray_icon.h  tray_icon_win.cc
shell/ui/base/: ui_base_types.h  window_open_disposition.cc  window_open_disposition.h
shell/ui/cocoa/: electron_bundle_mover.h  electron_bundle_mover.mm  lynxtron_menu_controller.h  lynxtron_menu_controller.mm  window_buttons_proxy.h  window_buttons_proxy.mm
shell/ui/display/: BUILD.gn  desktop_screen.h  display.cc  display.h  display_change_notifier.cc  display_change_notifier.h  display_export.h  display_layout.cc  display_layout.h  display_layout_builder.cc  display_layout_builder.h  display_observer.cc  display_observer.h  screen.cc  screen.h  tablet_state.h
shell/ui/events/: event_constants.h
shell/ui/gfx/: BUILD.gn  buffer_types.h  color_palette.h  color_space.cc  color_space.h  color_space_export.h  color_space_win.cc  color_space_win.h  color_utils.cc  color_utils.h  display_color_spaces.cc  display_color_spaces.h  gfx_export.h  hdr_static_metadata.cc  hdr_static_metadata.h  icc_profile.cc  icc_profile.h  icon_util.cc  icon_util.h  native_ui_types.h  native_widget_types_mac.mm  shadow_value.cc  shadow_value.h  skbitmap_operations.cc  skbitmap_operations.h  skia_color_space_util.cc  skia_color_space_util.h  switches.cc  switches.h
shell/ui/skia/: BUILD.gn
src/: .gitignore  .prettierignore  BUILD.gn  CONTRIBUTING.md  CPPLINT.cfg  lynxtron_extra.gni  package.json  tsconfig.json
src/.changeset/: config.json
src/.github/workflows/: ci.yml
src/dependencies/: DEPS  DEPS.extension  DEPS.lynx  DEPS.lynxtron  DEPS.tools  DEPS.tools_shared
src/lib/browser/: init.ts
src/lib/common/: define-properties.ts  init.ts  webpack-globals-provider.ts
src/lib/lynxbts/: init.ts
src/lib/node/: asar-fs-wrapper.ts  init.ts
src/patches/: config.json
src/patches/base/: .patches  adapt-modp-with-lynx-prefix.patch  build_add_electron_tracing_category.patch  chore_introduce_blocking_api_for_electron.patch  remove-private-symbol.patch
src/patches/lynx/: .patches  0002-Add-overload-to-initialize-MessageLoop-with-MessageL.patch  0003-Replace-MessageLoopimpl-with-libuv-for-lynx-bts.patch  0004-Unify-V8-Version-for-Lynx-BTS-with-NodeJS.patch  0005-Change-COREPACK_ENABLE_NETWORK-to-1-form-0.patch  0007-feat-macos-implement-hybrid-composition-overlay-pipe.patch  config.json
src/patches/node/: .patches  build_add_gn_build_files.patch  build_minify_embedded_node_builtins.patch  build_restore_clang_as_default_compiler_on_macos.patch  build_store_amaro_wasm_as_raw_bytes.patch  chore_allow_the_node_entrypoint_to_be_a_builtin_module.patch  cli_move_--trace-atomics-wait_to_eol.patch  fix_allow_passing_fileexists_fn_to_legacymainresolve.patch  fix_do_not_resolve_electron_entrypoints.patch  fix_handle_filesystem_errors_in_cpsynccopydir.patch  fix_windows_build_problem.patch  refactor_attach_cppgc_heap_on_v8_isolate_creation.patch  src_remove_dependency_on_wrapper-descriptor-based_cppheap.patch
src/patches/protobuf/: .patches
src/patches/tools/: Remove_unnecessary_build_dependencies_for_v8_context.patch
src/patches/url/: .patches  move_jni_zero_import_inside_android_condition.patch
src/patches/v8/: adapt-lynx-perfetto-trace.patch
src/plugin/cef/: run_cmake_with_env.cmd
src/script/: abort_am_sessions.py  apply_all_patches.py  spec-runner.js
src/script/lib/: __init__.py  git.py  npx.py  patches.py  utils.js
src/script/node/: generate_amaro_raw_wasm.py  generate_node_headers.py  generate_node_version_header.py  minify_node_js2c_inputs.js
src/shell/api/: api_app.cc  api_app.h  api_app_mac.mm  api_app_mas.mm  api_base_window.cc  api_base_window.h  api_menu.cc  (+42 more)
src/spec/: api-app-spec.ts  api-clipboard-spec.ts  api-dialog-spec.ts  api-lynx-window-progress-bar-spec.ts  api-lynx-window-spec.ts  api-menu-spec.ts  api-native-image-spec.ts  api-shell-spec.ts  api-tray-spec.ts  api-utility-process-spec.ts  bridging-lynx-node-spec.ts  disabled-tests.json  index.js  lynx-node-bts-await-spec.ts  node-spec.ts  package.json
src/tools/: compress_helper.py  download_from_google_storage.py  envsetup.ps1  prepare_build_env.py
src/typings/: internal-lynxtron.d.ts
tools/extension_builder/: CMakeLists.txt  copy_include_files.cjs  package.json
(+1174 files in other folders)
