# Copyright 2025 The Lynxtron Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("//build/config/win/manifest.gni")
import("//testing/test.gni")
import("//tools/v8_context_snapshot/v8_context_snapshot.gni")
import("build/asar.gni")
import("build/js2c_toolchain.gni")
import("build/npm.gni")
import("build/templated_file.gni")
import("build/tsc.gni")
import("build/webpack/webpack.gni")
import("lynxtron_extra.gni")

if (is_mac) {
  import("//build/config/mac/rules.gni")
  import("//third_party/icu/config.gni")
  import("//v8/gni/v8.gni")

  assert(
      mac_deployment_target == "12.0",
      "Chromium has updated the mac_deployment_target, please update this assert and flag this as a breaking change (docs/breaking-changes.md)")
}

lynxtron_project_name = "lynxtron"
lynxtron_product_name = "Lynxtron"

# TODO(Guo Xi): We need to consider how to generate version numbers, referring to Chrome's approach (as seen in chrome/VERSION)
lynxtron_version = "1.0.0"

config("branding") {
  defines = [
    "LYNXTRON_PRODUCT_NAME=\"$lynxtron_product_name\"",
    "LYNXTRON_PROJECT_NAME=\"$lynxtron_project_name\"",
  ]
}

config("lynxtron_lib_config") {
  include_dirs = [ "." ]
}

action("lynxtron_generate_node_defines") {
  script = "build/generate_node_defines.py"

  inputs = [
    "//third_party/node/src/tracing/trace_event_common.h",
    "//third_party/node/src/tracing/trace_event.h",
    "//third_party/node/src/util.h",
  ]

  outputs = [
    "$target_gen_dir/push_and_undef_node_defines.h",
    "$target_gen_dir/pop_node_defines.h",
  ]

  args = [ rebase_path(target_gen_dir) ] + rebase_path(inputs)
}

npm_action("lynxtron_version_args") {
  script = "generate-version-json"

  outputs = [ "$target_gen_dir/lynxtron_version.args" ]

  args = rebase_path(outputs) + [ "$lynxtron_version" ]

  inputs = [ "script/generate-version-json.js" ]
}

templated_file("lynxtron_version_header") {
  deps = [ ":lynxtron_version_args" ]

  template = "build/templates/lynxtron_version.tmpl"
  output = "$target_gen_dir/lynxtron_version.h"

  args_files = get_target_outputs(":lynxtron_version_args")
}

templated_file("lynxtron_win_rc") {
  deps = [ ":lynxtron_version_args" ]

  template = "build/templates/lynxtron_rc.tmpl"
  output = "$target_gen_dir/win-resources/lynxtron.rc"

  args_files = get_target_outputs(":lynxtron_version_args")
}

copy("lynxtron_win_resource_files") {
  sources = [
    "shell/app/resources/win/lynxtron.ico",
    "shell/app/resources/win/resource.h",
  ]
  outputs = [ "$target_gen_dir/win-resources/{{source_file_part}}" ]
}

templated_file("lynxtron_version_file") {
  deps = [ ":lynxtron_version_args" ]

  template = "build/templates/version_string.tmpl"
  output = "$root_build_dir/version"

  args_files = get_target_outputs(":lynxtron_version_args")
}

browser_bundle_deps = [
  "lib/browser/api/app.ts",
  "lib/browser/api/base-window.ts",
  "lib/browser/api/exports/lynxtron.ts",
  "lib/browser/api/lynx-window.ts",
  "lib/browser/api/module-list.ts",
  "lib/browser/api/native-image.ts",
  "lib/browser/api/screen.ts",
  "lib/browser/api/shell.ts",
  "lib/browser/init.ts",
  "lib/common/define-properties.ts",
  "lib/common/webpack-globals-provider.ts",
  "package.json",
  "tsconfig.json",
  "tsconfig.lynxtron.json",
  "typings/internal-ambient.d.ts",
  "typings/internal-lynxtron.d.ts",
]

webpack_build("lynxtron_browser_bundle") {
  # deps = [ ":build_lynxtron_definitions" ]

  inputs = browser_bundle_deps

  config_file = rebase_path("build/webpack/webpack.config.browser.js")
  out_file = "$root_gen_dir/lynxtron/js2c/browser_init.js"
}

node_bundle_deps = [
  "lib/node/asar-fs-wrapper.ts",
  "lib/node/init.ts",
  "package.json",
  "tsconfig.json",
  "tsconfig.lynxtron.json",
  "typings/internal-ambient.d.ts",
  "typings/internal-lynxtron.d.ts",
]

webpack_build("lynxtron_node_bundle") {
  # deps = [ ":build_lynxtron_definitions" ]

  inputs = node_bundle_deps

  config_file = "build/webpack/webpack.config.node.js"
  out_file = "$root_gen_dir/lynxtron/js2c/node_init.js"
}

action("lynxtron_js2c") {
  deps = [
    ":lynxtron_browser_bundle",
    ":lynxtron_node_bundle",
    "//third_party/node:node_js2c($lynxtron_js2c_toolchain)",
  ]

  sources = [
    "$root_gen_dir/lynxtron/js2c/browser_init.js",
    "$root_gen_dir/lynxtron/js2c/node_init.js",
  ]

  inputs = sources
  outputs = [ "$root_gen_dir/lynxtron_natives.cc" ]

  script = "build/js2c.py"
  out_dir =
      get_label_info(":anything($lynxtron_js2c_toolchain)", "root_out_dir")
  args = [
           rebase_path("$out_dir/node_js2c"),
           rebase_path("$root_gen_dir"),
         ] + rebase_path(outputs, root_gen_dir) +
         rebase_path(sources, root_gen_dir)
}

target_gen_default_app_js = "$root_gen_dir/lynxtron/js/default_app"

typescript_build("default_app_js") {
  # deps = [ ":build_lynxtron_definitions" ]

  sources = [
    "default_app/default_app.ts",
    "default_app/main.ts",
  ]

  output_gen_dir = "${target_gen_default_app_js}"
  output_dir_name = "default_app"
  tsconfig = "tsconfig.default_app.json"
}

copy("default_app_static") {
  exec_script("default_app/app/build.py")
  sources = [
    "default_app/app/dist/default_app.bundle",
    "default_app/icon.png",
    "default_app/package.json",
  ]

  outputs =
      [ "$target_gen_default_app_js/lynxtron/default_app/{{source_file_part}}" ]
}

# copy("default_app_octicon_deps") {
#   sources = filenames.default_app_octicon_sources
#   outputs = [ "$target_gen_default_app_js/lynxtron/default_app/octicon/{{source_file_part}}" ]
# }

asar("default_app_asar") {
  deps = [
    ":default_app_js",
    ":default_app_static",
  ]
  deps += lynxtron_asar_extra_deps

  root = "$target_gen_default_app_js/lynxtron/default_app"
  sources = get_target_outputs(":default_app_js") +
            get_target_outputs(":default_app_static")
  outputs = [ "$root_out_dir/resources/default_app.asar" ]
}

gin_helper_sources = [
  "shell/common/gin_helper/arguments.cc",
  "shell/common/gin_helper/arguments.h",
  "shell/common/gin_helper/callback.cc",
  "shell/common/gin_helper/callback.h",
  "shell/common/gin_helper/cleaned_up_at_exit.cc",
  "shell/common/gin_helper/cleaned_up_at_exit.h",
  "shell/common/gin_helper/destroyable.cc",
  "shell/common/gin_helper/destroyable.h",
  "shell/common/gin_helper/error_thrower.cc",
  "shell/common/gin_helper/error_thrower.h",
  "shell/common/gin_helper/event.cc",
  "shell/common/gin_helper/event.h",
  "shell/common/gin_helper/event_emitter_caller.cc",
  "shell/common/gin_helper/event_emitter_caller.h",
  "shell/common/gin_helper/event_emitter_template.cc",
  "shell/common/gin_helper/event_emitter_template.h",
  "shell/common/gin_helper/function_template.cc",
  "shell/common/gin_helper/function_template.h",
  "shell/common/gin_helper/locker.cc",
  "shell/common/gin_helper/locker.h",
  "shell/common/gin_helper/object_template_builder.cc",
  "shell/common/gin_helper/object_template_builder.h",
  "shell/common/gin_helper/persistent_dictionary.cc",
  "shell/common/gin_helper/persistent_dictionary.h",
  "shell/common/gin_helper/promise.cc",
  "shell/common/gin_helper/promise.h",
  "shell/common/gin_helper/trackable_object.cc",
  "shell/common/gin_helper/trackable_object.h",
  "shell/common/gin_helper/wrappable.cc",
  "shell/common/gin_helper/wrappable.h",
]

gin_converters_sources = [
  "shell/common/gin_converters/file_dialog_converter.cc",
  "shell/common/gin_converters/file_dialog_converter.h",
  "shell/common/gin_converters/gfx_converter.cc",
  "shell/common/gin_converters/gfx_converter.h",
  "shell/common/gin_converters/image_converter.cc",
  "shell/common/gin_converters/image_converter.h",
  "shell/common/gin_converters/login_item_settings_converter.cc",
  "shell/common/gin_converters/login_item_settings_converter.h",
  "shell/common/gin_converters/message_box_converter.cc",
  "shell/common/gin_converters/message_box_converter.h",
  "shell/common/gin_converters/value_converter.cc",
  "shell/common/gin_converters/value_converter.h",
]

if (is_mac) {
  ui_sources_macos = [
    "shell/ui/gfx/native_ui_types_mac.mm",
    "shell/ui/gfx/mac/coordinate_conversion.mm",
    "shell/ui/gfx/mac/coordinate_conversion.h",
  ]
}

source_set("lynxtron_lib") {
  public_configs = [
    ":lynxtron_lib_config",
    ":branding",
  ]

  configs += [
    "//v8:external_startup_data",
    "//third_party/node:node_external_config",
  ]

  deps = [
    ":lynxtron_generate_node_defines",
    ":lynxtron_js2c",
    ":lynxtron_version_header",
    "shell/lynx_view_holder:lynx_holder",
    "shell/ui/display",
    "shell/ui/gfx",
    "shell/ui/gfx/codec",
    "shell/ui/skia:skia_ext",
    "//base",
    "//base:i18n",
    "//crypto",
    "//gin",
    "//third_party/node:libnode",
    "//third_party/re2",
    "//url",
    "//v8",
    "//v8:v8_libplatform",
  ]

  include_dirs = [
    ".",
    "$root_gen_dir/lynxtron",
    "$target_gen_dir",
  ]

  sources = [
    "shell/api/api_app.cc",
    "shell/api/api_app.h",
    "shell/api/api_asar.cc",
    "shell/api/api_base_window.cc",
    "shell/api/api_base_window.h",
    "shell/api/api_command_line.cc",
    "shell/api/api_dialog.cc",
    "shell/api/api_environment.cc",
    "shell/api/api_event_emitter.cc",
    "shell/api/api_event_emitter.h",
    "shell/api/api_lynx_extension_utils.cc",
    "shell/api/api_lynx_window.cc",
    "shell/api/api_lynx_window.h",
    "shell/api/api_native_image.cc",
    "shell/api/api_native_image.h",
    "shell/api/api_screen.cc",
    "shell/api/api_screen.h", 
    "shell/api/api_shell.cc",
    "shell/api/api_v8_util.cc",
    "shell/api/api_v8_util.h",
    "shell/api/lynxtron_bindings.cc",
    "shell/api/lynxtron_bindings.h",
    "shell/api/ui/file_dialog.h",
    "shell/api/ui/message_box.h",
    "shell/app/application.cc",
    "shell/app/application.h",
    "shell/app/javascript_environment.cc",
    "shell/app/javascript_environment.h",
    "shell/app/library_main.cc",
    "shell/app/main_parts.cc",
    "shell/app/main_parts.h",
    "shell/app/main_runner.cc",
    "shell/app/main_runner.h",
    "shell/app/microtasks_runner.cc",
    "shell/app/microtasks_runner.h",
    "shell/app/native_window.cc",
    "shell/app/native_window.h",
    "shell/app/native_window_observer.h",
    "shell/app/relauncher.cc",
    "shell/app/relauncher.h",
    "shell/app/window_list.cc",
    "shell/app/window_list.h",
    "shell/common/application_info.cc",
    "shell/common/application_info.h",
    "shell/common/asar/archive.cc",
    "shell/common/asar/archive.h",
    "shell/common/asar/asar_util.cc",
    "shell/common/asar/asar_util.h",
    "shell/common/asar/scoped_temporary_file.cc",
    "shell/common/asar/scoped_temporary_file.h",
    "shell/common/color_parser.cc",
    "shell/common/color_parser.h",
    "shell/common/color_util.cc",
    "shell/common/color_util.h",
    "shell/common/data_url.cc",
    "shell/common/data_url.h",
    "shell/common/global_thread.cc",
    "shell/common/global_thread.h",
    "shell/common/io_thread.cc",
    "shell/common/io_thread.h",
    "shell/common/key_weak_map.h",
    "shell/common/logging.cc",
    "shell/common/logging.h",
    "shell/common/lynxtron_command_line.cc",
    "shell/common/lynxtron_command_line.h",
    "shell/common/lynxtron_paths.h",
    "shell/common/node_bindings.cc",
    "shell/common/node_bindings.h",
    "shell/common/node_util.cc",
    "shell/common/node_util.h",
    "shell/common/options_switches.h",
    "shell/common/path_provider.cc",
    "shell/common/path_provider.h",
    "shell/common/platform_util.cc",
    "shell/common/platform_util.h",
    "shell/common/process_singleton/process_singleton.h",
    "shell/common/process_singleton/process_singleton_internal.cc",
    "shell/common/process_singleton/process_singleton_internal.h",
    "shell/common/size_constraints.cc",
    "shell/common/size_constraints.h",
    "shell/common/skia_util.cc",
    "shell/common/skia_util.h",
    "shell/common/v8_util.cc",
    "shell/common/v8_util.h",
    "shell/common/v8_value_converter.h",
    "shell/common/v8_value_converter_impl.cc",
    "shell/common/v8_value_converter_impl.h",
  ]

  sources += gin_helper_sources

  # sources += ui_sources
  sources += gin_converters_sources

  if (is_posix) {
    sources += [ "shell/app/main_parts_posix.cc" ]
  }

  if (is_mac) {
    sources += ui_sources_macos
    sources += [
      "shell/api/api_app_mac.mm",
      "shell/api/api_native_image_mac.mm",
      "shell/api/native_window_mac.h",
      "shell/api/native_window_mac.mm",
      "shell/api/ui/file_dialog_mac.mm",
      "shell/api/ui/mac/lynx_ns_window.h",
      "shell/api/ui/mac/lynx_ns_window.mm",
      "shell/api/ui/mac/lynx_ns_window_delegate.h",
      "shell/api/ui/mac/lynx_ns_window_delegate.mm",
      "shell/api/ui/message_box_mac.mm",
      "shell/app/application_mac.mm",
      "shell/app/mac/dict_util.h",
      "shell/app/mac/dict_util.mm",
      "shell/app/mac/lynxtron_application.h",
      "shell/app/mac/lynxtron_application.mm",
      "shell/app/mac/lynxtron_application_delegate.h",
      "shell/app/mac/lynxtron_application_delegate.mm",
      "shell/app/main_parts_mac.mm",
      "shell/app/relauncher_mac.cc",
      "shell/app/uv_stdio_fix.cc",
      "shell/app/uv_stdio_fix.h",
      "shell/common/application_info_mac.mm",
      "shell/common/asar/archive_mac.mm",
      "shell/common/mac/main_application_bundle.h",
      "shell/common/mac/main_application_bundle.mm",
      "shell/common/mac/url_conversions.h",
      "shell/common/mac/url_conversions.mm",
      "shell/common/mac_util.h",
      "shell/common/mac_util.mm",
      "shell/common/node_bindings_mac.cc",
      "shell/common/node_bindings_mac.h",
      "shell/common/platform_util_mac.mm",
      "shell/common/process_singleton/process_singleton_lock_posix.cc",
      "shell/common/process_singleton/process_singleton_lock_posix.h",
      "shell/common/process_singleton/process_singleton_mac.mm",
      "shell/common/process_singleton/process_singleton_posix.cc",
      "shell/ui/cocoa/electron_bundle_mover.h",
      "shell/ui/cocoa/electron_bundle_mover.mm",
      "shell/ui/cocoa/window_buttons_proxy.h",
      "shell/ui/cocoa/window_buttons_proxy.mm",
    ]

    frameworks = [
      "Foundation.framework",
      "CoreServices.framework",
      "ApplicationServices.framework",
      "AppKit.framework",
      "ServiceManagement.framework",
      "Carbon.framework",
      "IOKit.framework",
      "AppKit.framework",
      "UniformTypeIdentifiers.framework",
    ]

    weak_frameworks = [ "QuickLookThumbnailing.framework" ]
  }

  if (is_win) {
    sources += [
      "shell/api/api_native_image_win.cc",
      "shell/api/dpi_win.cc",
      "shell/api/dpi_win.h",
      "shell/api/native_window_win.cc",
      "shell/api/native_window_win.h",
      "shell/api/ui/file_dialog_win.cc",
      "shell/api/ui/message_box_win.cc",
      "shell/api/ui/win/dialog_thread.cc",
      "shell/api/ui/win/dialog_thread.h",
      "shell/api/ui/win/jump_list.cc",
      "shell/api/ui/win/jump_list.h",
      "shell/app/application_win.cc",
      "shell/app/relauncher_win.cc",
      "shell/app/win/scoped_hstring.cc",
      "shell/app/win/scoped_hstring.h",
      "shell/common/application_info_win.cc",
      "shell/common/asar/archive_win.cc",
      "shell/common/node_bindings_win.cc",
      "shell/common/node_bindings_win.h",
      "shell/common/nt_internals.h",
      "shell/common/platform_util_win.cc",
      "shell/common/process_singleton/chrome_process_finder.cc",
      "shell/common/process_singleton/chrome_process_finder.h",
      "shell/common/process_singleton/process_singleton_win.cc",
      "shell/common/win_util.cc",
      "shell/common/win_util.h",
      "shell/ui/base/win/shell.cc",
      "shell/ui/base/win/shell.h",
    ]
    deps += [
      "shell/ui",
      # "shell/ui/gfx:gfx_skia",
    ]
  }
  deps += [ "shell/ui" ]
}

bundle_data("lynxtron_app_resource_bundle_data") {
  sources = [ "//third_party/icu/flutter/icudtl.dat" ]

  outputs = [ "{{bundle_contents_dir}}/Resources/{{source_file_part}}" ]
}

if (is_mac) {
  lynxtron_mac_bundle_id = "com.github.Lynxtron"
  lynxtron_framework_name = "$lynxtron_product_name Framework"

  mac_framework_bundle("lynxtron_framework") {
    configs += lynxtron_framework_extra_configs
    deps = lynxtron_framework_extra_deps

    # TODO(Guo Xi): using macro defines
    output_name = "Lynxtron Framework"
    framework_version = "1.0"
    framework_contents = [
      "Resources",
      "Libraries",
    ]

    public_deps = [ ":lynxtron_lib" ]

    deps += [
      ":lynxtron_framework_resources",
      "//base",
      "//third_party/node:libnode",
    ]
    info_plist = "shell/common/resources/mac/Info.plist"

    extra_substitutions = [
      "LYNXTRON_BUNDLE_ID=$lynxtron_mac_bundle_id.framework",
      "LYNXTRON_VERSION=$lynxtron_version",
    ]

    frameworks = []

    include_dirs = [ "." ]

    ldflags = [
      "-Wl,-install_name,@rpath/$output_name.framework/$output_name",
      "-rpath",
      "@loader_path/Libraries",

      # TOOD(Guo Xi): generate libuv.a
      # Required for exporting all symbols of libuv.
      # "-Wl,-force_load,obj/third_party/node/deps/uv/libuv.a",
    ]

    ldflags += [
      "-Wl,-dead_strip",
      "-Wl,-dead_strip_dylibs",
    ]

    if (is_build_with_lynx) {
      frameworks += [
        "Carbon.framework",
        "Cocoa.framework",
        "CoreVideo.framework",
        "IOSurface.framework",
        "Metal.framework",
        "QuartzCore.framework",
        "OpenGL.framework",
        "JavaScriptCore.framework",
        "WebKit.framework",
      ]
    }
  }

  bundle_data("lynxtron_framework_resources") {
    public_deps = []
    sources = []

    # if (icu_use_data_file) {
    #   sources += [ "$root_out_dir/icudtl.dat" ]
    #   public_deps += [ "//third_party/icu:icudata" ]
    # }
    if (v8_use_external_startup_data) {
      public_deps += [ "//v8" ]
      sources += [ "$root_out_dir/snapshot_blob.bin" ]

      # TODO(Guo Xi): review use_v8_context_snapshot
      # if (use_v8_context_snapshot) {
      #   sources += [ "$root_out_dir/$v8_context_snapshot_filename" ]
      #   public_deps += [ "//tools/v8_context_snapshot" ]
      # } else {
      #   sources += [ "$root_out_dir/snapshot_blob.bin" ]
      # }
    }
    outputs = [ "{{bundle_resources_dir}}/{{source_file_part}}" ]
  }

  bundle_data("lynxtron_app_framework_bundle_data") {
    sources = [ "$root_out_dir/$lynxtron_framework_name.framework" ]

    # if (!is_mas_build) {
    #   sources += get_target_outputs(":stripped_mantle_framework") +
    #              get_target_outputs(":stripped_reactiveobjc_framework") +
    #              get_target_outputs(":stripped_squirrel_framework")
    # }
    outputs = [ "{{bundle_contents_dir}}/Frameworks/{{source_file_part}}" ]
    public_deps = [
      ":lynxtron_framework+link",
      # ":stripped_mantle_framework",
      # ":stripped_reactiveobjc_framework",
      # ":stripped_squirrel_framework",
    ]

    # foreach(helper_params, content_mac_helpers) {
    #   sources +=
    #       [ "$root_out_dir/${lynxtron_helper_name}${helper_params[2]}.app" ]
    #   public_deps += [ ":lynxtron_helper_app_${helper_params[0]}" ]
    # }
    if (!is_build_with_lynx) {
      sources += [ "$root_out_dir/libLynx.dylib" ]

      public_deps += [ "shell/lynx:lynx_runtime_files" ]
    }
  }

  bundle_data("lynxtron_app_resources") {
    public_deps = [ ":default_app_asar" ]
    sources = [
      "$root_out_dir/resources/default_app.asar",
      "shell/app/resources/mac/lynxtron.icns",
    ]

    public_deps += [ "shell/lynx:lynx_resources" ]
    outputs = [ "{{bundle_resources_dir}}/{{source_file_part}}" ]
  }

  asar_hashed_info_plist("lynxtron_app_plist") {
    keys = [ "DEFAULT_APP_ASAR_HEADER_SHA" ]
    hash_targets = [ ":default_app_asar_header_hash" ]
    plist_file = "shell/app/resources/mac/Info.plist"
  }

  mac_app_bundle("lynxtron_app") {
    output_name = "lynxtron"

    include_dirs = [ "." ]

    configs += lynxtron_app_extra_configs
    deps = lynxtron_app_extra_deps
    deps += [
      ":lynxtron_app_framework_bundle_data",
      ":lynxtron_app_plist",
      ":lynxtron_app_resources",
      ":lynxtron_framework+link",
      "//base/allocator:early_zone_registration_apple",

      # "//base",
      # "//base/allocator:early_zone_registration_apple",
    ]
    if (is_build_with_lynx) {
      deps += [ ":lynxtron_app_resource_bundle_data" ]
    }

    info_plist_target = ":lynxtron_app_plist"

    sources = [ "shell/app/main_mac.cc" ]

    ldflags = [
      "-rpath",
      "@executable_path/../Frameworks",
    ]

    # TODO(Guo Xi): The bundle ID in info.plist needs to be replaced.
    extra_substitutions = [
      "LYNXTRON_BUNDLE_ID=$lynxtron_mac_bundle_id",
      "LYNXTRON_VERSION=$lynxtron_version",
    ]
  }
}

if (is_win) {
  group("lynxtron_win32_resources") {
    public_deps = [
      ":lynxtron_app_resource_bundle_data",
      ":lynxtron_win_rc",
      ":lynxtron_win_resource_files",
    ]
  }

  windows_manifest("lynxtron_app_manifest") {
    sources = [
      "shell/app/resources/win/disable_window_filtering.manifest",
      "shell/app/resources/win/dpi_aware.manifest",
      as_invoker_manifest,
      common_controls_manifest,
      default_compatibility_manifest,
    ]
  }

  executable("lynxtron_app") {
    configs -= [ "//build/config/win:console" ]
    configs += [
      "//build/config/win:windowed",
      "//build/config/win:delayloads",
    ]

    deps = [
      ":default_app_asar",
      ":lynxtron_app_manifest",
      ":lynxtron_shared",
      ":lynxtron_win32_resources",
      "//base",
    ]

    include_dirs = [ "." ]

    sources = [
      "shell/app/main_win.cc",
      "shell/common/lynxtron_command_line.cc",
      "shell/common/lynxtron_command_line.h",
    ]
  }

  shared_library("lynxtron_shared") {
    deps = [ ":lynxtron_lib" ]

    configs += [ "//build/config/win:delayloads" ]
    libs = [
      "Comctl32.lib",
      "Wintrust.lib",
      "wtsapi32.lib",
      "Dwmapi.lib",
      "WebView2LoaderStatic.lib",
    ]
    lib_dirs = [ "//third_party/webview2/Microsoft.Web.WebView2.1.0.902.49/build/native/$current_cpu" ]
    output_name = "lxtn"
  }
}

test("lynxtron_unittests") {
  deps = [
    ":lynxtron_lib",
    "//base",
    "//base/test:test_support",
    "//gin",
    "//testing/gmock",
    "//testing/gtest",
    "//v8",
  ]
  configs += [ "//v8:external_startup_data" ]

  include_dirs = [ "." ]

  sources = [
    "shell/common/io_thread_unittest.cc",
    "shell/common/v8_util_unittest.cc",
    "shell/common/v8_value_converter_impl_unittest.cc",
    "shell/test/lynxtron_test_suite.cc",
    "shell/test/lynxtron_test_suite.h",
    "shell/test/run_all_unittests.cc",
  ]
}
