declare_args() {
  # A list of extra dependencies to add to the root target. This allows a
  # checkout to add additional targets without explicitly changing any checked-
  # in files.
  lynxtron_framework_extra_configs = []
  lynxtron_framework_extra_deps = []
  lynxtron_app_extra_configs = []
  lynxtron_app_extra_deps = []
  lynxtron_asar_extra_deps = []
}
