import("//build/config/gclient_args.gni")

# Some non-Chromium builds don't support building java targets.
enable_java_templates = true

# Variable that can be used to support multiple build scenarios, like when
# V8 is embedded within a target.
build_with_v8_embedder = build_with_chromium

# Don't use Chromium's third_party/binutils.
linux_use_bundled_binutils_override = false

# Tracing requires //third_party/perfetto.
enable_base_tracing = false

# Skip assertions about 4GiB file size limit. See https://crbug.com/648948.
ignore_elf32_limitations = false

# Use the system install of Xcode for tools like ibtool, libtool, etc.
use_system_xcode = true

# Enables assertions on safety checks in libc++.
#
# This should be set to true whenever building with Chrome's custom libc++ in
# order to guard against undefined behavior. However, the asserts added by
# hardening libc++ may introduce some performance overhead, so this is
# configurable to simplify A/B tests, and to allow performance-sensitive
# projects embedding Chrome (e.g. ANGLE) to disable libc++ hardening.
#
# Note that setting this to true only has an effect when also building with
# `use_custom_libcxx = true`.
enable_safe_libcxx = true

# Controls whether to build with the source code of the weak-node-api library
use_weak_node_api_source = true

declare_args() {
  # Use Perfetto's trace processor for converting protobuf-encoded traces to
  # the legacy JSON format in base::TraceLog.
  use_perfetto_trace_processor = false
}
